Preparing AngularJS integration

--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -1189,7 +1189,7 @@ $topbar-height: 65px
 
 // Controlling the styles for the title in the top bar
 // $topbar-title-weight: $font-weight-normal;
-// $topbar-title-font-size: rem-calc(17);
+$topbar-title-font-size: rem-calc(25)
 
 // Style the top bar dropdown elements
 // $topbar-dropdown-bg: #333;
