--- a/src/sass/shared/_buttons.sass
+++ b/src/sass/shared/_buttons.sass
@@ -24,7 +24,7 @@ $btn-style-transparent-2-border: 1px solid $btn-style-transparent-2-font-color
   &:active, &:hover
     background-color: $btn-style-1-hover-bg-color
   &.inactive
-    bg-color: $btn-style-1-inactive-bg-color
+    background-color: $btn-style-1-inactive-bg-color
 
 %btn-style-transparent
   padding: 0 25px
