--- a/src/templates/courses.slim
+++ b/src/templates/courses.slim
@@ -1,74 +1,30 @@
 header.page-title
   .row
-    .large-3.columns.vertical-center
-      a class="button radius btn-style-1" Criar nova turma
     .large-4.large-centered.vertical-center.columns
       h1 Turmas
 
 .row
   ul.courses.large-block-grid-2
 
-    li.card.course
-      .scheme-1.title
-        h1 Tr230
-        span.subtitle.secondary-color Colégio Anchieta - 2ª série
+    li.card.course ng-repeat="klass in klasses"
+      div ng-class="'title scheme-' + klass.order"
+        h1 {{klass.name}}
+        span.subtitle.secondary-color {{klass.location}}
         i.icons.icon-arrow-open.secondary-color.vertical-center
       .events
-        .row.has-overlay ng-repeat="i in [1,2,3,4,5,6]"
-          a.overlay.published.hide href="#/courses.html"
+        .row.has-overlay ng-repeat="event in klass.events | limitTo: 6"
+          a.overlay.published.hide href="#/courses.html" ng-if="klass.published"
             .button.btn-style-transparent-1.radius.vertical-center ver diário
           .large-1.columns icon
-          .large-1.columns 03
-          .large-4.columns Português
-          .large-2.columns 10 mai
-          .large-1.columns seg
-          .large-3.columns 10h - 12h
-
-    li.card.course
-      .scheme-2.title
-        h1 j107
-        span.subtitle.secondary-color Colégio Anchieta - 2ª série
-        i.icons.icon-arrow-open.secondary-color.vertical-center
-      .events
-        .row.has-overlay ng-repeat="i in [1,2,3]"
-          a.overlay.published.hide href="#/courses.html"
-            .button.btn-style-transparent-1.radius.vertical-center ver diário
-          .large-1.columns icon
-          .large-1.columns 03
-          .large-4.columns Literatura
-          .large-2.columns 10 mai
-          .large-1.columns seg
-          .large-3.columns 10h - 12h
-
-    li.card.course
-      .scheme-3.title
-        h1 Tr230
-        span.subtitle.secondary-color Colégio Anchieta - 2ª série
-        i.icons.icon-arrow-open.secondary-color.vertical-center
-      .events
-        .row.has-overlay ng-repeat="i in [1,2,3,4,5,6]"
-          a.overlay.published.hide href="#/courses.html"
-            .button.btn-style-transparent-1.radius.vertical-center ver diário
-          .large-1.columns icon
-          .large-1.columns 03
-          .large-4.columns Português
-          .large-2.columns 10 mai
-          .large-1.columns seg
-          .large-3.columns 10h - 12h
-
-    li.card.course
-      .scheme-4.title
-        h1 Tr230
-        span.subtitle.secondary-color Colégio Anchieta - 2ª série
-        i.icons.icon-arrow-open.secondary-color.vertical-center
-      .events
-        .row.has-overlay ng-repeat="i in [1,2,3,4,5,6]"
-          a.overlay.published.hide href="#/courses.html"
-            .button.btn-style-transparent-1.radius.vertical-center ver diário
-          .large-1.columns icon
-          .large-1.columns 03
-          .large-4.columns Português
-          .large-2.columns 10 mai
-          .large-1.columns seg
-          .large-3.columns 10h - 12h
+          .large-1.columns {{event.order}}
+          .large-4.columns {{event.name}}
+          .large-2.columns
+            | {{event.start_at | date: 'dd MMM'}}
+            / 01 Jan
+          .large-1.columns
+            | {{event.start_at | date: 'EEE'}}
+            / Mon
+          .large-3.columns
+            | {{event.start_at | date: 'HH:mm'}} - {{event.end_at | date: 'HH:mm'}}
+            / 14:00 - 16:00
 
