--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -21,12 +21,13 @@ html.no-js lang="en" ng-app="DunnoApp"
             a href="#/events.html" Aulas
           li
             a href="#/courses.html" Turmas
-          li
-            a href="#content.html" Calendário
-          li
-            a href="#content.html" Tarefas
-          li
-            a href="#styleguide.html" Styleguide
+          - if !publish?
+            li
+              a href="#content.html" Calendário
+            li
+              a href="#content.html" Tarefas
+            li
+              a href="#styleguide.html" Styleguide
 
     .content ng-controller="MainCtrl" ng-view=""
 
@@ -51,5 +52,60 @@ html.no-js lang="en" ng-app="DunnoApp"
         $scope.$on('$viewContentLoaded', function () {
           $(document).foundation();
         });
+
+        klasses = [
+          {
+            name: 'PSI 1957', location: 'PUC-Rio – L210', order: 1, published: true, events: []
+          },
+          {
+            name: 'PSI 1600', location: 'PUC-Rio – L206', order: 2, published: true, events: []
+          }
+        ];
+
+        events = [];
+
+        now = new Date();
+        for (var i = 0; i < 10; i++) {
+          events.push({
+            klass: klasses[0],
+            order: i,
+            name: 'Tópicos em Psicologia, Trabalho e Organizações',
+            start_at: now,
+            end_at: new Date(now.getTime() + 60 * 60 * 1000),
+            tasks: [
+              "Resumo da aula anterior",
+              "Apresentar novo conceito",
+              "Aplicar enquete",
+              "Mostrar vídeo",
+              "Revisar conceito",
+              "Passar tarefa de casa"
+            ]
+          });
+        }
+
+        for (var i = 0; i < 3; i++) {
+          events.push({
+            klass: klasses[1],
+            order: i,
+            name: 'Método Científico',
+            start_at: now,
+            end_at: new Date(now.getTime() + 60 * 60 * 1000),
+            tasks: [
+              "Resumo da aula anterior",
+              "Apresentação dos seminários",
+              "Definição dos próximos temas"
+            ]
+          });
+        }
+
+        events.forEach(function(event){
+          event.klass.events.push(event);
+        });
+
+        $scope.events = events;
+        $scope.event = events[0];
+        $scope.klasses = klasses;
+        $scope.klass = klasses[0];
+
       }]);
 
