--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -1,5 +1,6 @@
 doctype html
 html.no-js lang="en" ng-app="DunnoApp"
+  / test
   head
     meta charset="utf-8" /
     meta content="width=device-width, initial-scale=1.0" name="viewport" /
