telas inicias de login e detalhes da turma

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -10,6 +10,8 @@
 @import pages/courses
 @import pages/events
 @import pages/diary
+@import pages/login
+@import pages/coursedetail
 @import pages/styleguide
 
 
