--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -27,6 +27,10 @@ html.no-js lang="en" ng-app="DunnoApp"
               a href="#content.html" Calendário
             li
               a href="#content.html" Tarefas
+			li
+			  a href="#login.html" Login
+			li
+			  a href="#coursedetail.html" Turma (detalhe)
             li
               a href="#styleguide.html" Styleguide
 
