implementação inicial páginas 1/7/8/18 e revisão 20/21

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -11,7 +11,8 @@
 @import pages/events
 @import pages/diary
 @import pages/login
-@import pages/coursedetail
+@import pages/course_detail
+@import pages/create_course
 @import pages/styleguide
 
 
