--- a/src/templates/index.slim
+++ b/src/templates/index.slim
@@ -4,7 +4,7 @@ html.no-js lang="en" ng-app="DunnoApp"
   head
     meta charset="utf-8" /
     meta content="width=device-width, initial-scale=1.0" name="viewport" /
-    title Foundation
+    title Dunno
     link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'
     link href="css/normalize.css" rel="stylesheet" /
     link href="css/foundation.css" rel="stylesheet" /
@@ -27,10 +27,14 @@ html.no-js lang="en" ng-app="DunnoApp"
               a href="#content.html" Calendário
             li
               a href="#content.html" Tarefas
-			li
-			  a href="#login.html" Login
-			li
-			  a href="#coursedetail.html" Turma (detalhe)
+            li
+			        a href="#login.html" Login
+            li
+              a href="#course_detail.html" Turma (detalhe)
+            li
+              a href="#create_course.html" Criar disciplina 
+            li
+              a href="#diary.html" Diário
             li
               a href="#styleguide.html" Styleguide
 
@@ -41,7 +45,7 @@ html.no-js lang="en" ng-app="DunnoApp"
     script src="js/foundation/js/foundation/foundation.magellan.js"
     script src="js/foundation/js/foundation/foundation.dropdown.js"
     script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.js"
-    script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular-route.js"></script>
+    script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular-route.js"
     script src="js/angular-scroll/angular-scroll.min.js"
     javascript:
       $(document).foundation();
@@ -112,5 +116,92 @@ html.no-js lang="en" ng-app="DunnoApp"
         $scope.klasses = klasses;
         $scope.klass = klasses[0];
 
+        // aulas
+
+        events2 = [
+          { klass: { name: "PSI 1957", location: "PUC-Rio", order: 1 },
+            day: "15", month: "Julho", weekday: "TER", time: "8:30h", course: "Tópicos em Psicologia do Trabalho", published: true, has_exam: false,
+            tasks: [
+              "Ipsum dolor sit amet consectetur adipis.",
+              "Lorem ipsum dolor sit amet, consectetur adipis.",
+              "Ipsum dolor sit amet, consectetur adipis."
+            ]},
+          { klass: { name: "JI07", location: "PUC-Rio", order: 2 },
+            day: "15", month: "Julho", weekday: "TER", time: "8:30h", course: "Fundamentos em Neurociência", published: true, has_exam: false,
+            tasks: [
+              "Ipsum dolor sit amet consectetur adipis.",
+              "Lorem ipsum dolor sit amet, consectetur adipis.",
+              "Ipsum dolor sit amet, consectetur adipis."
+            ]},
+          { klass: { name: "PSI 1957", location: "PUC-Rio", order: 3 },
+            day: "15", month: "Fevereiro", weekday: "TER", time: "8:30h", course: "Matemática", published: true, has_exam: false,
+            tasks: [
+              "Ipsum dolor sit amet consectetur adipis.",
+              "Lorem ipsum dolor sit amet, consectetur adipis.",
+              "Ipsum dolor sit amet, consectetur adipis."
+            ]},
+          { klass: { name: "PSI 1848", location: "PUC-Rio", order: 4 },
+            day: "15", month: "Setembro", weekday: "TER", time: "8:30h", course: "PPB", published: true, has_exam: false,
+            tasks: [
+              "Ipsum dolor sit amet consectetur adipis.",
+              "Lorem ipsum dolor sit amet, consectetur adipis.",
+              "Ipsum dolor sit amet, consectetur adipis."
+            ]},
+          { klass: { name: "PSI 1848", location: "PUC-Rio", order: 1 },
+            day: "15", month: "Outubro", weekday: "TER", time: "8:30h", course: "PPB", published: true, has_exam: true,
+            tasks: [
+              "Ipsum dolor sit amet consectetur adipis.",
+              "Lorem ipsum dolor sit amet, consectetur adipis.",
+              "Ipsum dolor sit amet, consectetur adipis."
+            ]},
+          { klass: { name: "PSI 1020", location: "PUC-Rio", order: 2 },
+            day: "15", month: "Novembro", weekday: "TER", time: "8:30h", course: "Métodos Científicos", published: false, has_exam: false,
+            tasks: []},
+          { klass: { name: "PSI 1020", location: "PUC-Rio", order: 3 },
+            day: "15", month: "Dezembro", weekday: "TER", time: "8:30h", course: "Métodos Científicos", published: false, has_exam: false,
+            tasks: []}
+        ];
+        $scope.events2 = events2;
+
+        // datas das aulas
+        klass_dates = [
+          { weekday: "SEG", time: "8:30h", day: "21", month: "Maio", description: "Aula 1", has_exam: false, is_today: false, is_completed: true },
+          { weekday: "SEG", time: "8:30h", day: "22", month: "Maio", description: "Aula 1", has_exam: false, is_today: false, is_completed: true },
+          { weekday: "SEG", time: "8:30h", day: "23", month: "Maio", description: "Aula 1", has_exam: true, is_today: false, is_completed: true },
+          { weekday: "SEG", time: "8:30h", day: "25", month: "Maio", description: "Aula 1", has_exam: false, is_today: false, is_completed: true },
+          { weekday: "SEG", time: "8:30h", day: "02", month: "Junho", description: "Aula 1", has_exam: false, is_today: true, is_completed: false },
+          { weekday: "SEG", time: "8:30h", day: "04", month: "Junho", description: "Aula 1", has_exam: false, is_today: false, is_completed: false },
+          { weekday: "SEG", time: "8:30h", day: "05", month: "Setembro", description: "Aula 1", has_exam: false, is_today: false, is_completed: false },
+          { weekday: "SEG", time: "8:30h", day: "08", month: "Outubro", description: "Aula 1", has_exam: false, is_today: false, is_completed: false },
+          { weekday: "SEG", time: "8:30h", day: "11", month: "Novembro", description: "Aula 1", has_exam: false, is_today: false, is_completed: false },
+          { weekday: "SEG", time: "8:30h", day: "12", month: "Dezembro", description: "Aula 1", has_exam: false, is_today: false, is_completed: false },
+          { weekday: "SEG", time: "8:30h", day: "14", month: "Janeiro", description: "Aula 1", has_exam: false, is_today: false, is_completed: false },
+          { weekday: "SEG", time: "8:30h", day: "17", month: "Fevereiro", description: "Aula 1", has_exam: false, is_today: true, is_completed: false },
+        ];
+        $scope.klass_dates = klass_dates;
+
+        // disciplinas
+
+        courses = [
+          { course: "Tópicos em psicologia do trabalho", name: "PSI 1020", location: "PUC-Rio", department: "Psicologia", room: "Sala 401", period: "03 Março - 27 Junho", students: 18, order: 1,
+          dates: [
+            "SEG 12-14h", "TER 10-12h", "QUI 10-12h", "SEX 14-18h"
+          ]},
+          { course: "Métodos Científicos", name: "PSI 2100", location: "PUC-Rio", department: "Psicologia", room: "Sala 401", period: "03 Março - 27 Junho", students: 18, order: 2,
+          dates: [
+            "SEG 12-14h", "TER 10-12h", "QUI 10-12h", "SEX 14-18h"
+          ]},
+          { course: "PPB", name: "PSI 1848", location: "PUC-Rio", department: "Psicologia", room: "Sala 401", period: "03 Março - 27 Junho", students: 18, order: 3,
+          dates: [
+            "SEG 12-14h", "TER 10-12h", "QUI 10-12h", "SEX 14-18h"
+          ]},
+          { course: "Fundamentos em neurociência", name: "JI07", location: "PUC-Rio", department: "Psicologia", room: "Sala 401", period: "03 Março - 27 Junho", students: 18, order: 4,
+          dates: [
+            "SEG 12-14h", "TER 10-12h", "QUI 10-12h", "SEX 14-18h"
+          ]},
+        ];
+        $scope.courses = courses;
+
+        
       }]);
 
