--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -13,6 +13,7 @@
 @import pages/login
 @import pages/course_detail
 @import pages/create_course
+@import pages/student
 @import pages/styleguide
 
 
